[project]
name = "mcp-pubmed"
version = "0.1.0"
description = "MCP server to query PubMed / NCBI via the E-utilities API"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
keywords = ["mcp", "pubmed", "ncbi", "biomedical", "research"]
dependencies = [
    "mcp[cli]>=1.0.0",
    "httpx>=0.27.0",
]

[project.scripts]
mcp-pubmed = "main:mcp.run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
